--- a/Orcamento/index.html
+++ b/Orcamento/index.html
@@ -128,6 +128,7 @@
             </div>
         </fieldset>
     </form>
+    <button id="envia">Clique-me</button>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
