--- a/Orcamento/index.html
+++ b/Orcamento/index.html
@@ -5,130 +5,134 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Orçamento</title>
+    <title>Cadastros</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
 <body>
-
-    <h1>Orçamento</h1>
-    <form id="formulario-cliente">
-        <fieldset>
-            <legend>Cliente</legend>
-            <div>
-                <label>Nome:</label>
-                <input type="text" id="nome-cliente" required="required" data-custom-message="Digite o nome"
-                    placeholder="Digite o nome">
-            </div>
-            <div>
-                <label>CPF:</label>
-                <input type="text" id="cpf-cliente" required="required" data-custom-message="Digite o CPF"
-                    placeholder="Digite o CPF">
-            </div>
-        </fieldset>
-    </form>
-    <form id="formulario-produto">
-        <legend>Produto</legend>
-        <fieldset>
-                <input type="hidden" id="id-produto">
+    <nav>
+        <ul>
+            <li><button id="btn-cadastro-funcionario">Cadastro funcionario</button></li>
+            <li><button id="btn-cadastro-cidade">Cadastro cidade</button></li>
+            <li><button id="btn-cadastro-profissao">Cadastro profissão</button></li>
+        </ul>
+    </nav>
+    <div id="div-funcionario">
+        <form id="formulario-funcionario">
+            <fieldset>
+                <input type="hidden" id="id-funcionario">
+                <legend>Funcionario</legend>
                 <div>
                     <label>Nome:</label>
-                    <input type="text" id="nome-produto" required="required" data-custom-message="Digite o nome"
-                        placeholder="Digite o nome">
+                    <input type="text" id="nome-funcionario" required="required" data-custom-message="Digite o nome"
+                    placeholder="Digite o nome">
                 </div>
                 <div>
-                    <label>Quantidade:</label>
-                    <input type="text" id="qtd-produto" required="required" data-custom-message="Digite a quantidade"
-                        placeholder="Digite a quantidade">
+                    <label>CPF:</label>
+                    <input type="text" id="cpf-funcionario" required="required" data-custom-message="Digite o CPF"
+                    placeholder="Digite o CPF">
                 </div>
                 <div>
-                    <label>Valor unitário:</label>
-                    <input type="text" id="valor-unitario" required="required" data-custom-message="Digite o valor"
-                        placeholder="Digite o valor">
+                    <label>Data de nascimento:</label>
+                    <input type="date" id="data-funcionario" required="required" data-custom-message="selecione a data">
                 </div>
                 <div>
-                    <label>Valor total:</label>
-                    <input type="text" id="valor-total">
-                    </div>
+                    <label>Cidade:</label>
+                    <label id="cidade-funcionario" required="required"></label>
+                </div>
                 <div>
-                    <button id="produto-btn-limpar">Limpar</button>
-                    <button type="submit">Adicionar</button>
+                    <label>Salario:</label>
+                    <label id="salario-funcionario" required="required"></label>
+                </div>
+                <button type="submit">Adicionar</button>
             </fieldset>
         </form>
+        <div>
+            <table border="1" id="tabelaFuncionario">
+                <thead>
+                    <th>Nome</th>
+                    <th>CPF</th>
+                    <th>Data de nascimento</th>
+                    <th>Cidade</th>
+                    <th>Salario</th>
+                </thead>
+                <tbody id="corpo-funcionario">
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div id="div-cidade">
+        <form id="formulario-cidade">
+            <legend>Cidade</legend>
+            <fieldset>
+                <input type="hidden" id="id-cidade">
+                <div>
+                    <label>Cidade:</label>
+                    <input type="text" id="nome-cidade" required="required" data-custom-message="Digite o nome"
+                    placeholder="Digite o nome">
                 </div>
-                <div class="tabelaP">
-                        <table id="tabelaProduto">
-                            <thead>
-                                <th id="produto">Produto</th>
-                                <th id="qtd">Qtd</th>
-                                <th id="valorUnitario">Valor Unitario</th>
-                                <th id="Total">Total</th>
-                                <th id="opcoes">Opções</th>
-                            </thead>
-                            <tbody id="corpo-produto">
+                <div>
+                    <label>Estado:</label>
+                    <input type="text" id="estado" required="required" data-custom-message="Digite o estado"
+                    placeholder="Digite o estado">
+                </div>
+                <div>
+                    <button type="submit">Adicionar</button>
+                </div>
+            </fieldset>
+        </form>
+        <div class="cidade">
+            <table id="tabelaCidade">
+                <thead>
+                    <th id="cidade">Cidade</th>
+                    <th id="estado">Estado</th>
+                    <th id="opcoes">Opções</th>
+                </thead>
+                <tbody id="corpo-cidade">
 
-                            </tbody>
-                            <tfoot>
-                                <td id="totais" colspan="3">Totais:</td>
-                                <td id="btnCalcular"><button>Calcula Totais</button></td>
-                            </tfoot>
-                        </table>
-                    </div>
-    <form id="formulario-servicos">
-        <legend>Serviços</legend>
-        <fieldset>
-            <input type="hidden" id="id-servico">
-            <div>
-                <label>Descrição:</label>
-                <input type="text" id="descricao-servico" required="required" data-custom-message="Digite a descrição"
-                    placeholder="Digite a descrição">
-            </div>
-            <div>
-                <label>Valor:</label>
-                <input type="text" id="valor-servico" required="required" data-custom-message="Digite a quantidade"
-                    placeholder="Digite a quantidade">
-            </div>
-            <div>
-                <button id="servicos-btn-limpar">Limpar</button>
-                <button type="submit">Adicionar</button>
-        </fieldset>
-    </form>
-            </div>
-            <div>
-                <table border="1" id="tabelaServico">
-                    <thead>
-                        <th>Servicos</th>
-                        <th>Valor</th>
-                        <th>Opções</th>
-                    </thead>
-                    <tbody id="corpo-tabela-servicos">
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div id="div-profissao">
+        <form id="formulario-profissao">
+            <legend>Profissao</legend>
+            <fieldset>
+                <input type="hidden" id="id-profissao">
+                <div>
+                    <label>Função:</label>
+                    <input type="text" id="funcao" required="required" data-custom-message="Digite a funcao"
+                        placeholder="Digite a funcao">
+                </div>
+                <div>
+                    <label>Area:</label>
+                    <input type="text" id="area" required="required" data-custom-message="Digite a area"
+                        placeholder="Digite a area">
+                </div>
+                <div>
+                    <label>Salario:</label>
+                    <input type="text" id="salario" required="required" data-custom-message="Digite o salario"
+                        placeholder="Digite o salario">
+                </div>
+                <div>
+                    <button type="submit">Adicionar</button>
+                </div>
+            </fieldset>
+        </form>
+        <div>
+            <table border="1" id="tabelaProfissao">
+                <thead>
+                    <th>Função</th>
+                    <th>Area</th>
+                    <th>Salario</th>
+                </thead>
+                <tbody id="corpo-profissao">
 
-                    </tbody>
-                    <tfoot>
-                        <td>Total</td>
-                        <td colspan="2" id="totalServico"></td>
-                    </tfoot>
-                </table>
-            </div>
-    <form id="formulario-totais">
-        <fieldset>
-            <legend>Totais</legend>
-            <div>
-                <label>Total de produtos:</label>
-                <label id="ttProduto"></label>
-
-            </div>
-            <div>
-                <label>Total dos servicos:</label>
-                <label id="ttServico"></label>
-            </div>
-            <div>
-                <label>Total geral:</label>
-                <label id="ttGeral"></label>
-            </div>
-        </fieldset>
-    </form>
-    <button id="envia">Clique-me</button>
+                </tbody>
+            </table>
+        </div>
+    </div>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
